src/shared/ui/Toast/ui/Toast.module.scss
.toastsWrapper {
  position: fixed;
  top: 20px;
  right: 20px;
  z-index: 9999;
  display: flex;
  flex-direction: column;
  gap: 10px;
  pointer-events: none;
}

.toast {
  display: flex;
  align-items: center;
  gap: 10px;
  background: var(--color-bg);
  color: var(--color-text-main);
  padding: 4px 14px;
  border-radius: 10px;
  min-width: 240px;
  max-width: 320px;
  border: 1px solid var(--toast-border);
  box-shadow: 0 6px 20px var(--shadow-sm);
  font-size: 14px;
  pointer-events: auto;
  transform: translateY(-20px);
  opacity: 0;
  animation: toast-in 0.3s ease forwards;
}

.text {
  flex: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: var(--font-size-sm);
  white-space: nowrap;
}

.close {
  margin-left: auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.icon {
  width: 16px;
  height: 16px;
  flex-shrink: 0;
  color: var(--color-text-main);
}

@keyframes toast-in {
  from {
    transform: translateY(-30px);
    opacity: 0;
  }

  to {
    transform: translateY(0);
    opacity: 1;
  }
}

@keyframes toast-out {
  from {
    transform: translateY(0);
    opacity: 1;
  }

  to {
    transform: translateY(-30px);
    opacity: 0;
  }
}

.closing {
  animation: toast-out 0.25s ease forwards;
}

